starting to build out user recognition to display items

--- a/views/html/index.html
+++ b/views/html/index.html
@@ -5,8 +5,17 @@
 </head>
 <body>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.min.js"></script>
-look ma no html
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
-<script type="text/javascript" src="../js/marketplace.js"></script>
+<h1>Welcome to marketplace!</h1>
+
+<form method="POST" action="/login">
+  <input type="text" placeholder='Username' name='username'>
+  <input type="password" placeholder='Password' name='password'>
+  <input type='submit'>
+</form>
+
+<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/js/marketplace.js"></script>
 </body>
 </html>
